modify img column and search column

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button type="button" id="search-btn" class="btn btn-primary mb-2">Search</button>
         </div>
         <section class="images">
-            <div class=" d-flex justify-content-center align-items-center gap-4 mt-3 gallery-header mb-5">
+            <div class=" d-flex flex-md-row flex-column justify-content-center align-items-center gap-4 mt-3 gallery-header mb-5">
                 <h4 class="head-title text-center">Select image for create slider</h4>
                 <div class="input-group-lg col-md-3 mb-2 mb-md-0">
                     <input class="form-control" id="duration" placeholder="slider change duration in second">
