--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-primary-subtle container">
     <div class="">
-        <h3 class="mt-4 text-center">Search Nature Image for Create Slider</h3>
+        <h3 class="mt-4 text-center">Search Nature Images</h3>
         <div class="form-inline mt-3 d-flex justify-content-center gap-3">
             <div class="input-group-lg col-md-6 mb-2">
                 <input type="text" class="form-control" id="search" placeholder="nature">
@@ -26,7 +26,7 @@
             <div class=" d-flex flex-md-row flex-column justify-content-center align-items-center gap-md-4 mt-3 gallery-header mb-5">
                 <h4 class="head-title text-center">Select image for create slider</h4>
                 <div class="input-group-lg col-md-3 mb-2 mb-md-0">
-                    <input class="form-control" id="duration" placeholder="slider change duration in second">
+                    <input class="form-control" id="duration" placeholder="slider duration in second">
                 </div>
                 <button id="create-slider" class="btn btn-primary px-md-5 px-3">Create Slider</button>
             </div>
